test/semantic_errors/invalid_binaryop5.mc
void main() {
    bool res;
    bool a;
    char b;
    res = a < b;
}